# simple_shared_todo

./: Cargo.toml  README.md
proto/service/: service.proto
simple_shared_todo_app/: README.md  pubspec.yaml
simple_shared_todo_app/android/app/: build.gradle
simple_shared_todo_app/android/app/src/debug/: AndroidManifest.xml
simple_shared_todo_app/android/app/src/main/: AndroidManifest.xml
simple_shared_todo_app/android/app/src/main/kotlin/com/example/simple_shared_todo_app/: MainActivity.kt
simple_shared_todo_app/ios/Runner/: Info.plist
simple_shared_todo_app/ios/Runner.xcodeproj/: project.pbxproj
simple_shared_todo_app/linux/: CMakeLists.txt  my_application.cc
simple_shared_todo_app/macos/Runner.xcodeproj/: project.pbxproj
simple_shared_todo_app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
simple_shared_todo_app/macos/Runner/Configs/: AppInfo.xcconfig
simple_shared_todo_app/test/: widget_test.dart
simple_shared_todo_app/web/: index.html  manifest.json
simple_shared_todo_app/windows/: CMakeLists.txt
simple_shared_todo_app/windows/runner/: Runner.rc  main.cpp
simple_shared_todo_server/: Cargo.toml  build.rs
simple_shared_todo_server/src/: data.rs  main.rs  server.rs
simple_shared_todo_server/src/database/: mod.rs
test_resources/: cert.pem  key.pem
